--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -1364,6 +1364,61 @@
         left: 30em !important;
     }
   }
+   @media only screen 
+  and (device-width: 2048px) 
+  and (orientation: landscape){
+    #consultdown_img1{
+     left: 76em ! important;
+    }
+     #consultdown_img3{
+     left: 76em ! important;
+    }
+     #consultdown_img5{
+     left: 76em ! important;
+    }
+    .new_wizardNotefor4 {
+    right: -122px ! important;
+    }
+    #consultdown_img0 {
+    left: 46em ! important;
+   }
+   #consultdown_img2 {
+    left: 46em ! important;
+   }
+   #consultdown_img4 {
+    left: 46em ! important;
+   }
+   #consultdown_img6 {
+    left: 46em ! important;
+   }
+   #consultdown_data1 {
+    left: 13% ! important;
+    width: 690px ! important;
+  }
+   #consultdown_data3 {
+    left: 13% ! important;
+    width: 690px ! important;
+  }
+   #consultdown_data5 {
+    left: 13% ! important;
+     width: 690px ! important;
+  }
+  #consultdown_data0{
+    right: 16% ! important;
+    width: 690px ! important;
+    }
+    #consultdown_data2{
+    right: 16% ! important;
+    width: 690px ! important;
+    }
+    #consultdown_data4{
+    right: 16% ! important;
+    width: 690px ! important;
+    }
+    .downimgtext {
+        left: 30em !important;
+    }
+  }
   @media only screen 
   and (device-width: 1024px) 
   and (device-height: 1366px) 
