--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1514,8 +1514,8 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   }}  
 
   @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: portrait) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
     .pt20{
@@ -1545,7 +1545,7 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
       width: 220px ! important;
     }
     .newcard {
-    width: 255px ! important;
+    width: 215px ! important;
     }
     .navigation_tab{
       margin-left: 25px ! important;
@@ -1811,10 +1811,16 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .newcard_HD {
     width: 330px ! important;
   }
+  .roadjourny{
+    z-index: 0;
+  }
  }
  @media only screen and (device-width : 1280px) and (device-height : 800px) { 
   .All1blog1{
     margin-left: 85px ! important;
+  }
+  .roadjourny{
+    z-index: 0;
   }
  }
  @media screen and (device-width: 1920px){
@@ -1837,6 +1843,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   }
   .newcard_HD {
     width: 370px;
+  }
+  .roadjourny{
+    z-index: 0;
   }
 
  }
@@ -1864,6 +1873,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .All1blog1{
     margin-left: 80px ! important;
   }
+  .roadjourny{
+    z-index: -1;
+  }
  }
   @media screen and (device-width: 1792px){
 
@@ -1889,7 +1901,40 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .All1blog1{
     margin-left: 80px ! important;
   }
+  .roadjourny{
+    z-index: 0;
+  }
  }
+@media only screen and (device-width : 1152px) {
+   .newcard_HD{
+    width: 240px ! important;
+
+   }
+   .newcard {
+    width: 265px ! important;
+  }
+  .All1blog1{
+    margin-left: 71px ! important;
+  }
+  .roadjourny{
+    z-index: 0;
+  }
+ } 
+
+@media only screen and (device-width : 1600px) {
+ .B3T_challengesDiv{
+  width: 430px ! important;
+ } 
+ .ApplicationImg {
+    padding-left: 81px !important;
+  }
+   .All1blog1{
+    margin-left: 71px ! important;
+  }
+  .roadjourny{
+    z-index: 0;
+  }
+}
 
 
 
