--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -350,7 +350,7 @@
     }
     
  }  
-@media screen and (min-width: 1900px) {
+@media screen and (min-width: 1920px) {
      .CareerBlockHighDef{
         right: 87px ! important;
         width: 505px ! important;
@@ -489,10 +489,40 @@
         object-fit: none;
     }
   } 
+  @media only screen and (device-width: 1152px) {
+    .iogimg_4 img{
+      width: 96.3%;
+    }
+    .iogblock2text {
+      margin-top: 33px ! important;
+    }
+    .iogimgblock2 img{
+      height: 123%;
+    }
+    .iogimg_4{
+      margin-left: 0px ! important;
+    }
+    .secondblockk {
+    /*padding-top: 100px;*/
+    }
+    .iogblock1text{
+        padding-top: 30px ! important;
+    }
+    .iogimgblock2{
+            height: 1007px;
+            margin-top: -170px;
+    }
+    .iogimgblock2 img{
+        object-fit: none;
+    }
+    .iogblock3text{
+      width: 312px ! important;
+    }
+  } 
 
   @media only screen 
-  and (min-width: 1440px) 
-  and (max-height: 900px)  {
+  and (device-width: 1440px) 
+  and (device-height: 900px)  {
     .secondblockk{
         /*padding-top: 80px ! important;*/
     }
@@ -513,6 +543,64 @@
     }
     .iogblock1text{
         padding-top: 70px ! important;
+    }
+
+  }
+  @media only screen and (device-width: 1440px)  {
+    .secondblockk{
+        /*padding-top: 80px ! important;*/
+    }
+    .iogimgblock2{
+        height: auto ! important;
+    }
+    .CareerBlockHighDef {
+        position: absolute;
+        right: 43px;
+        width: 427px ! important;
+    }
+    .iogimg_4 img{
+        width: 98.1%;
+        margin-top: 2px;
+    }
+    .iogblock4text{
+        margin-top: 100px ! important;
+    }
+    .iogblock1text{
+        padding-top: 70px ! important;
+    }
+
+  }
+  @media only screen and (device-width: 1600px) {
+    .secondblockk{
+        /*padding-top: 80px ! important;*/
+    }
+    .iogimgblock2{
+        height: auto ! important;
+    }
+    .CareerBlockHighDef {
+        position: absolute;
+        right: 97px;
+        width: 427px ! important;
+    }
+    .iogimg_4 img{
+        width: 98.1%;
+        margin-top: 2px;
+    }
+    .iogimg_4{
+      width: 931px ! important;
+    }
+    .iogblock4text{
+        margin-top: 100px ! important;
+    }
+    .iogblock1text{
+        padding-top: 70px ! important;
+    }
+    .iogblock3text{
+      width: 480px! important;
+      height: 369px ! important;
+    }
+    .iogimgblock3 {
+      width: 471px;
     }
 
   }
@@ -543,7 +631,7 @@
         padding-top: 0px ! important;
     }
     .iogblock3text{
-        padding-top: 65px ! important;
+        padding-top: 50px ! important;
         padding-left: 20px ! important;
     }
    
@@ -643,6 +731,7 @@
    
     .CareerBlockHighDef {
       right: 134px ! important;
+      width: 501px ! important;
     }
     .ht_top{
       /*padding-left: 130px ! important;*/
@@ -655,7 +744,7 @@
     }
     .iogblock3text{
       width: 631px ! important;
-      /*margin-left: 62px ! important;*/
+      padding-top:  130px ! important;
     }
     .iogimgblock3 {
         width: 637px ! important;
@@ -672,7 +761,18 @@
     .iogimgblock2 {
         height: 874px ! important;
     }
-        
+    .iogimg_4 {
+       width: 1144px ! important;
+       /*margin-top: 170px ! important;*/
+     }
+     .iogblock1text {
+        padding-top: 173px ! important;
+      }
+     .iogimgblock3 img {
+      width: 107% ! important;
+      height: 373px;
+    }
+          
 
   } 
   @media only screen 
@@ -794,6 +894,38 @@
 
   }
   @media only screen and (device-width : 1680px) and (device-height : 1050px) {
+    .CareerBlockHighDef {
+      position: absolute;
+      right: 90px ! important;
+      width: 504px ! important;
+    }
+    .iogimgblock2{
+      margin-left: -71px ! important  ;
+      height: 1036px ! important;
+    }
+    .iogimgblock2 img{
+      width: 504px ! important;
+    }
+    .iogblock3text {
+    width: 536px ! important;
+    height: 370px;
+    padding-top: 112px ! important;
+    } 
+    .iogimgblock3 {
+      width: 525px ! important; 
+    }
+    .iogimgblock3 img{
+      width: 100%;
+     height: 99%;
+    }
+    .iogblock3text {
+    width: 443px ! important;
+    }
+    .iogimg_4 {
+      width: 970px ! important;
+    }
+  }  
+  @media only screen and (device-width : 1680px){
     .CareerBlockHighDef {
       position: absolute;
       right: 90px ! important;
